--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
         <div class="content" style="height:650px;">
           <div id="left_home">
             <div id="frase_home"><div id="frase">Descubra o melhor da noite e ganhe prêmios se divertindo!</div></div>
-            <div id="buttons_home">
+            <!--<div id="buttons_home">
               <div class="button_store"><img src="imgs/sets/play.png"></div>
               <div class="button_store"><img src="imgs/sets/app.png"></div>
-            </div>
+            </div>-->
           </div>
           <div id="right_home">
             <img src="imgs/sets/mockup.png" id="mockup_home">
@@ -71,7 +71,7 @@
             <br><br>
             Confira abaixo as cidades que já estão disponíveis em nosso aplicativo:
             </div>
-            <img src="imgs/images/foguete.png" style="height:300px;margin:0px auto;">
+            <img src="imgs/images/foguete.png" style="height:300px;margin:0px auto;margin-left:-250px;margin-bottom:calc(-5% - 5px);">
           </div>
         </div>
       </section>
