--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
           <div id="left_home">
             <div id="frase_home"><div id="frase">Descubra o melhor da noite e ganhe prêmios se divertindo!</div></div>
             <div id="buttons_home">
-              <div class="button_store"><img src="imgs/sets/play.png"></div>
-              <div class="button_store"><img src="imgs/sets/app.png"></div>
+              <!--<div class="button_store"><img src="imgs/sets/play.png"></div>
+              <div class="button_store"><img src="imgs/sets/app.png"></div>-->
             </div>
           </div>
           <div id="right_home">
@@ -57,7 +57,51 @@
             <br><br>
             Ficou curioso? Então confere aí!
           </div>
-          <div id="carroussel"></div>
+          <div id="carroussel">
+            <div class="car" id="c1">
+              <div class="text_car">
+                <div class="txt_car">
+                  <div class="title_car">EXPLORE</div>
+                  <p>Através de geolocalização, disponibilizamos num mapa ou numa lista, todas as festas, bares, pubs e eventos que estão rolando pertinho de você! Você ainda
+                  pode aplicar diversos filtros conforme o gênero musical preferido ou um filtro de distância, para saber o que está rolando em cidades vizinhas.</p>
+
+                  <p>Quer organizar o seu próprio evento? É só clicar em CRIAR EVENTO, definir se o evento é público ou privado e convidar seus amigos, pelo próprio app ou pelo Facebook.</p>
+                </div>
+              </div>
+              <div class="img_car"><img src="imgs/images/p1.png"></div>
+            </div>
+            <div class="car" id="c2">
+              <div class="text_car" style="float:left;margin-right:0%;margin-left:10%;">
+                <div class="txt_car">
+                  <div class="title_car">GANHE</div>
+                  <p>Descobriu pra onde ir? Perfeito! Agora confirme presença no evento! Ao fazer isso, se o lugar que você comparecer for um parceiro da Vou, você estará apto a receber
+                  V$  (Vous) - a moeda virtual da Vou. Ao comparecer ao evento, é só aguardar em torno de uma hora e pronto, você ganhará seus V$! Ah, e fique tranquilo, pois o seu
+                  check-in não precisa ser público ( ͡° ͜ʖ ͡°).</p>
+
+                  <p>Sabe o que é mais bacana? Os V$ que você acumula, você troca por vouchers de desconto nas casas parceiras, barateando ainda mais os gastos da sua noitada!</p>
+                </div>
+              </div>
+              <div class="img_car" style="float:right;margin-left:0%;margin-right:10%;"><img src="imgs/images/p2.png" style="float:right;"></div>
+            </div>
+            <div class="car" id="c3">
+              <div class="text_car">
+                <div class="txt_car">
+                  <div class="title_car">DIVIRTA-SE</div>
+                  <p>Além de tudo isso, temos uma rede social especialmente pensada para os frequentadores da noite. Lá, você pode seguir pessoas, adicionar fotos da sua noitada (c/ total
+                  integração com Facebook e Instagram), compartilhar momentos e muito mais.</p>
+
+                  <p>Viu alguém que te chamou a atenção? É só clicar no coração ao lado do nome da pessoa e aguardar. Se o lance for recíproco você será notificado, e aí é só combinar com
+                  o crush onde vocês irão se encontrar.</p>
+                </div>
+              </div>
+              <div class="img_car" style="margin-top:100px;"><img src="imgs/images/p3.png"></div>
+            </div>
+          </div>
+          <div id="bolls">
+            <div class="boll" id="b0"><img src="imgs/sets/bs.png"></div>
+            <div class="boll" id="b1"><img src="imgs/sets/bn.png"></div>
+            <div class="boll" id="b2"><img src="imgs/sets/bn.png"></div>
+          </div>
         </div>
       </section>
       <section id="time">
@@ -72,7 +116,10 @@
             <br><br>
             Confira abaixo as cidades que já estão disponíveis em nosso aplicativo:
             </div>
-            <img src="imgs/images/foguete.png" id="foguete" style="height:300px;margin:0px auto;margin-left:-250px;margin-bottom:calc(-5% - 5px);">
+            <div id="cities">
+              <div class="city" style="background-image:url('imgs/images/js-sc.jpg')"><div class="fundo_city"><div class="name_city">Jaraguá do Sul - SC</div></div></div>
+            </div>
+            <img src="imgs/images/foguete.png" id="foguete">
           </div>
         </div>
       </section>
